[gd_scene load_steps=5 format=3 uid="uid://bsyskwd3qwavu"]

[ext_resource type="Script" path="res://world/bomb/bomb.gd" id="1_1o5no"]
[ext_resource type="Texture2D" uid="uid://b2d6qtkgcvvay" path="res://world/sprites/bombs.png" id="2_e42m3"]
[ext_resource type="Texture2D" uid="uid://cgawlx2vnmos3" path="res://resources/particles/circle-export.png" id="3_ofopc"]

[sub_resource type="CircleShape2D" id="CircleShape2D_c7047"]
radius = 75.0

[node name="bomb" type="Node2D"]
script = ExtResource("1_1o5no")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_e42m3")

[node name="explosion_particles" type="CPUParticles2D" parent="."]
emitting = false
amount = 112
lifetime = 0.55
one_shot = true
explosiveness = 1.0
texture = ExtResource("3_ofopc")
emission_shape = 1
emission_sphere_radius = 8.0
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 150.0
initial_velocity_max = 250.0
scale_amount_min = 0.1
scale_amount_max = 0.25

[node name="explosion_area" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 27

[node name="CollisionShape2D" type="CollisionShape2D" parent="explosion_area"]
shape = SubResource("CircleShape2D_c7047")

[node name="explosion_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="body_entered" from="explosion_area" to="." method="_on_explosion_area_body_entered"]
[connection signal="timeout" from="explosion_timer" to="." method="_on_explosion_timer_timeout"]
